--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             html, body {
                 height: 100%;
                 width: 100%;
+				overflow: hidden;
             }
             
             canvas {
@@ -18,9 +19,9 @@
         
         <script id="shader-fs" type="x-shader/x-fragment">
             precision mediump float;
-
+			
             void main(void) {
-                gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+                gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
             }
         </script>
 
@@ -152,7 +153,7 @@
     }
 </script>
     </head>
-    <body onload="start();">
+    <body onLoad="start();">
         <canvas id="canvas"  width="800" height="600"></canvas>
     </body>
 </html>
