Turn tessellated Diamond into Sphere
Added code to turn the tessallated diamond into a sphere. This is done
by calculating the length of each vector, normalising it and then
multiplying the normalised vector by the desired radius. The smoothness
of the sphere is determined by the tessellation depth which is set with
the variable _tessellationDepth. The higher this is the more slower load
times are though as more depth = more processing.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html style="margin: 0; padding: 0;">
     <head>
         <title>The Solar System</title>
         <style>
@@ -126,7 +126,7 @@
     
     function initBuffers() {
         //generate here
-        planet.generate(/*radius: */ 5);
+        planet.generate(/*radius: */ 10);
     }
 
 
@@ -157,7 +157,7 @@
     }
 </script>
     </head>
-    <body onLoad="start();">
+    <body onLoad="start();" style="margin: 0; padding: 0;">
         <canvas id="canvas"  width="800" height="600"></canvas>
     </body>
 </html>
