Added multiple planets
Refactored code to handle multiple planets by using an array (of
planets) and forEach loops on the array. My understanding is that this
forEach loop exists only in ECMA5 and up but only IE7 & 8 don't support
it. Plus this uses webgl + shaders so if forEach doesn't work I really
doubt those techs will work. Could use standard for loops but I'm
assuming the array's forEach loop will be optimised by the js engine.

--- a/index.html
+++ b/index.html
@@ -122,11 +122,14 @@
         gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
     }
     
-    var planet = new Planet(0, 0, -5);
+    var planets = new Array(new Planet(0, 0, -50),
+                            new Planet(0, 1, -49.9));
     
     function initBuffers() {
         //generate here
-        planet.generate(/*radius: */ 10);
+        planets.forEach(function(i) {
+            i.generate(/*radius: */ 5);
+        });
     }
 
 
@@ -139,7 +142,9 @@
         mat4.identity(mvMatrix);
 
         //draw here
-        planet.draw(pMatrix, mvMatrix);
+        planets.forEach(function(i){
+            i.draw(pMatrix, mvMatrix);
+        });
     }
 
     function start() {
