--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             precision mediump float;
             
             void main(void) {
-                gl_FragColor = vec4(1.0* (gl_FragCoord.x / 218.0), 0.5 * (gl_FragCoord.y / 218.0), 0.0, 1.0);
+                gl_FragColor = vec4(1.0 , 0.9, 0.7, 1.0);
             }
         </script>
 
