--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
 
             void main(void) {
                 gl_FragColor = texture2D(sampler, vec2(vTexCoord.s, vTexCoord.t));
+
+                if (gl_FragColor.r < 0.1 && gl_FragColor.g < 0.1 && gl_FragColor.b < 0.1) {
+                  gl_FragColor.rgb *=  0.01;
+                }
             }
         </script>
 
@@ -124,8 +128,14 @@
             uniform mat4 uMVMatrix;
             uniform mat4 uPMatrix;
 
+            float rand(vec2 co){
+              return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
+            }
+
             void main(void) {
-                gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+                vec4 pos =  vec4(aVertexPosition, 1.0);
+                pos.xyz += rand(vec2(-1000, 1000));
+                gl_Position = uPMatrix * uMVMatrix * pos;
             }
         </script>
 
