--- a/index.html
+++ b/index.html
@@ -155,32 +155,15 @@
         <script type="text/javascript">
 
         function SetupPlanets() {
-          var sun = new Planet( /*location(x,z,y): */  0,  0, 0,
-                                /*orbit rotation (x,y)*/0,     0);
-          var mercury = new Planet( /*location(x,z,y): */ -8 -218 /*suns radius*/,  0, 0,
-                                    /*orbit rotation (x,y)*/225, 225);
-          var venus = new Planet( /*location(x,z,y): */ -14 -218 -22, 0, 0,
-                                  /*orbit rotation (x,y)*/240, 240);
-          var earth = new Planet( /*location(x,z,y): */ -20 -218 -22 -18, 0, 0,
-                                   /*orbit rotation (x,y)*/250, 250);
-          var mars = new Planet( /*location(x,z,y): */ -30 -218 -22 -18 -8, 0, 0,
-                                 /*orbit rotation (x,y)*/ 280, 280);
-          var jupiter = new Planet( /*location(x,z,y): */ -104 -218 -22 -18 -8 -8, 0, 0,
-                                    /*orbit rotation (x,y)*/350,     350);
-          var saturn = new Planet( /*location(x,z,y): */  -190 -218 -22 -18 -8 -8 -2,   0, 0,
-                                   /*orbit rotation (x,y)*/450,     450);
-          var uranus = new Planet( /*location(x,z,y): */  -384 -218 -22 -18 -8 -8 -2 -2,  0, 0,
-                                   /*orbit rotation (x,y)*/600,     600);
-          var neptune = new Planet( /*location(x,z,y): */  -600 -218 -22 -18 -8 -8 -2 -2 -1,  0, 0,
-                                    /*orbit rotation (x,y)*/800,     800);
-          mercury.setSpeed(3.33);
-          venus.setSpeed(1.4);
-          earth.setSpeed(1);
-          mars.setSpeed(0.55);
-          jupiter.setSpeed(0.083);
-          saturn.setSpeed(0.034);
-          uranus.setSpeed(0.0119);
-          neptune.setSpeed(0.00605);
+          var sun = new Planet({position: {x: 0, y: 0, z: 0}, orbit: {x: 0, y: 0, z:0}, speed: 0});
+          var mercury = new Planet({position: {x: -226, y: 0, z: 0}, orbit: {x: 225, y: 225, z:0}, speed:3.33});
+          var venus = new Planet({position: {x: -254, y: 0, z: 0}, orbit: {x: 240, y: 240, z:0}, speed: 1.4});
+          var earth = new Planet({position: {x: -278, y: 0, z: -22}, orbit: {x: 250, y: 250, z:0}, speed: 1});
+          var mars = new Planet({position: {x: -296, y: 0, z: 0}, orbit: {x: 280, y: 280, z:0}, speed: 0.55});
+          var jupiter = new Planet({position: {x: -378, y: 0, z: 0}, orbit: {x: 350, y: 350, z:0}, speed: 0.083});
+          var saturn = new Planet({position: {x: -466, y: 0, z: 0}, orbit: {x: 450, y: 450, z:0}, speed: 0.034});
+          var uranus = new Planet({position: {x: -662, y: 0, z: 0}, orbit: {x: 600, y: 600, z:0}, speed: 0.0119});
+          var neptune = new Planet({position: {x: -879, y: 0, z: 0}, orbit: {x: 800, y: 800, z:0}, speed: 0.00605});
 
           return [sun, mercury, venus, earth, mars, jupiter, saturn, uranus, neptune];
         }
