--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
 
         var time = 0;
         var zoom = -2000;
-        var rotation = 1.57;
+        var xRotation = 1.57;
+        var yRotation = 1.57;
         var clock_increment = 0.03;
 
         function drawScene() {
@@ -348,7 +349,8 @@
 
             mat4.identity(mvMatrix);
             mat4.translate(mvMatrix, [0, -10, zoom]);
-            mat4.rotate(mvMatrix, rotation, [1, 0, 0]);
+            mat4.rotate(mvMatrix, yRotation, [1, 0, 0]);
+            mat4.rotate(mvMatrix, xRotation, [0, 1, 0]);
             mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 0.1, 5000.0, pMatrix);
 
             //draw here
